
FILE(GLOB_RECURSE 
    _ASSETS
    "${CMAKE_CURRENT_SOURCE_DIR}/Assets/*"
)

FILE(GLOB_RECURSE 
    _SOURCES  
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.c"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
)

ADD_EXECUTABLE(
    HelloWorld
    ${_SOURCES}
    ${_ASSETS}
)

TARGET_COMPILE_FEATURES(
    HelloWorld
    PRIVATE
        cxx_std_17
        cxx_auto_type
)

TARGET_COMPILE_OPTIONS(
    HelloWorld 
    PRIVATE
        $<$<CXX_COMPILER_ID:GNU>:-Wall -Wno-unknown-pragmas>
        $<$<CXX_COMPILER_ID:Clang>:-Wall -Wno-unknown-pragmas>
        $<$<CXX_COMPILER_ID:MSVC>:-wd4068>
)

TARGET_LINK_LIBRARIES(
    HelloWorld
    Dusk
)

LIST(INSERT _ASSET_PATH 0 "${CMAKE_CURRENT_SOURCE_DIR}/Assets")
SET(DUSK_ASSET_PATH "")
FOREACH(path ${_ASSET_PATH})
    FILE(RELATIVE_PATH relpath "${CMAKE_CURRENT_SOURCE_DIR}" "${path}")
    LIST(APPEND DUSK_ASSET_PATH "${relpath}")
ENDFOREACH()

STRING(REPLACE ";" ":" DUSK_ASSET_PATH "${DUSK_ASSET_PATH}")

TARGET_COMPILE_DEFINITIONS(
    HelloWorld 
    PRIVATE
        DUSK_ASSET_PATH="${DUSK_ASSET_PATH}"
)

ADD_CUSTOM_TARGET(
    run-HelloWorld
    COMMAND $<TARGET_FILE:HelloWorld>
    DEPENDS HelloWorld
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

FOREACH(file IN ITEMS ${_SOURCES} ${_ASSETS})
    FILE(RELATIVE_PATH file_path ${CMAKE_CURRENT_SOURCE_DIR} ${file})
    GET_FILENAME_COMPONENT(file_path ${file_path} DIRECTORY)
    FILE(TO_NATIVE_PATH ${file_path} file_path)
    SOURCE_GROUP(${file_path} FILES ${file})
ENDFOREACH()

IF(MSVC)
    SET_TARGET_PROPERTIES(
        HelloWorld PROPERTIES 
        VS_DEBUGGER_WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
        VS_DEBUGGER_ENVIRONMENT "PATH=%PATH%;${CMAKE_MSVCIDE_RUN_PATH}"
        LINK_FLAGS "/NODEFAULTLIB:LIBCMT /NODEFAULTLIB:MSVCRT" 
    )
ENDIF()
