
SET(_TARGET DuskOpenGL)

IF(TARGET SDL2::SDL2)
    DUSK_MODULE(${_TARGET} OPENGL)

    LIST(APPEND MODULE_TARGETS ${_TARGET})
    SET(MODULE_TARGETS ${MODULE_TARGETS} PARENT_SCOPE)

    TARGET_LINK_LIBRARIES(
        ${_TARGET}
        PUBLIC
            DuskEngine
            SDL2::SDL2
    )
ELSE()
    MESSAGE(WARNING "Not building ${_TARGET}, missing SDL2::SDL2")
ENDIF()